// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typography /> Body story renders snapshot 1`] = `
<p
  color="base"
>
  Body paragraph 16/24
</p>
`;

exports[`<Typography /> BodySmall story renders snapshot 1`] = `
<p
  color="base"
>
  Body small 14/20
</p>
`;

exports[`<Typography /> BodyXSmall story renders snapshot 1`] = `
<p
  color="base"
>
  Body Xsmall 12/16
</p>
`;

exports[`<Typography /> Caption story renders snapshot 1`] = `
<p
  color="base"
>
  Caption 12/20
</p>
`;

exports[`<Typography /> Heading1 story renders snapshot 1`] = `
<h1
  color="base"
>
  Heading 1 24/32
</h1>
`;

exports[`<Typography /> Heading1AsHeading4 story renders snapshot 1`] = `
<h1
  color="base"
>
  Heading 1 styled as Heading 4
</h1>
`;

exports[`<Typography /> Heading2 story renders snapshot 1`] = `
<h2
  color="base"
>
  Heading 2 18/24
</h2>
`;

exports[`<Typography /> Heading3 story renders snapshot 1`] = `
<h3
  color="base"
>
  Heading 3 18/24
</h3>
`;

exports[`<Typography /> Heading4 story renders snapshot 1`] = `
<h4
  color="base"
>
  Heading 4 14/24
</h4>
`;

exports[`<Typography /> Heading4ColorNeutral story renders snapshot 1`] = `
<h4
  color="neutral"
>
  Neutral color Heading 4
</h4>
`;

exports[`<Typography /> Heading5 story renders snapshot 1`] = `
<h5
  color="base"
>
  Heading 5 12/20
</h5>
`;

exports[`<Typography /> Overline story renders snapshot 1`] = `
<p
  color="base"
>
  Overline 12/20
</p>
`;
